--- a/PACMAN/style.css
+++ b/PACMAN/style.css
@@ -1,7 +1,26 @@
+body{
+	background-color:rgb(65, 61, 61) ;
+}
+
 #canvas 
 {
 	position: fixed;
-	width: 100%;
-	height: 35px;
-	background: white;
+	width: auto;
+	height: auto;
+	background: rgb(65, 61, 61);
+}
+
+h1{
+	text-align: center;
+	font-size: x-large;
+	font-family: 'Trebuchet MS', sans-serif;
+}
+h2{
+	text-align: center;
+	font-size: large;
+	font-family: 'Trebuchet MS', sans-serif;
+}
+
+.text{
+	color: yellow;
 }
