changed time and score labels to be of paragraph, and made it in correct font and color.

--- a/PACMAN/style.css
+++ b/PACMAN/style.css
@@ -21,6 +21,11 @@ h2{
 	font-family: 'Trebuchet MS', sans-serif;
 }
 
-.text{
+p{
+	font-size: medium;
+	font-family: 'Trebuchet MS', sans-serif;
+}
+
+.txt{
 	color: yellow;
 }
