Trying to place username on side of the game screen, while seeing a bug in the game part

--- a/PACMAN/style.css
+++ b/PACMAN/style.css
@@ -21,6 +21,12 @@ h2 {
 	font-family: 'Trebuchet MS', sans-serif;
 }
 
+h3 {
+	text-align: center;
+	font-size: medium;
+	font-family: 'Trebuchet MS', sans-serif;
+}
+
 p {
 	font-size: medium;
 	font-family: 'Trebuchet MS', sans-serif;
