--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
 	background-color: rgb(61, 61, 61);
     left: 0;
     right: 0;
+	border-color: rgb(0, 0, 0);
+	border-radius: 5px;
+	border-width: 3px;
+	border-style: solid;
 }
 
 h1 {
